# FinService-Bot

./: .env  .env.example  .gitignore  .replit  AUDIT_REPORT.md  README.md  finservice.db  finservice.db-shm  finservice.db-wal  obs.py  pyproject.toml  replit.md  scheduler.py  task.md
.agents/memory/: MEMORY.md  channel-errors.md  delete-user-data-race.md  publisher-bot-injection.md  validation-duplicates.md
config/: services.yaml
src/finservice_bot/: __init__.py  __main__.py  cli.py  config.py  models.py  rendering.py  settings.py  validation.py
src/finservice_bot/bot/: __init__.py  application.py  handlers.py  states.py
src/finservice_bot/services/: __init__.py  channels.py  publisher.py
src/finservice_bot/storage/: __init__.py  schema.py  sqlite_repo.py
tests/: conftest.py  test_csv_validator.py  test_db_layer.py  test_templates.py
tests/unit/: test_bot_application.py  test_bot_handlers.py  test_channels.py  test_cli.py  test_config.py  test_publisher.py  test_rendering.py  test_schema.py  test_settings.py  test_sqlite_repo.py  test_validation.py
