[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finservice-bot"
version = "0.1.0"
description = "Telegram bot for curated financial-service referrals"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "python-telegram-bot[job-queue]==22.8",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "aiosqlite==0.20.0",
]

[project.scripts]
finservice-bot = "finservice_bot.cli:main"

[project.optional-dependencies]
dev = [
    "build==1.5.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "types-PyYAML==6.0.12.20260518",
    "httpx2==2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
